hopefully fixed nav/menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3392,7 +3392,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#nav {
-				
+				width:100%;
 			}
 
 				#nav + #main {
